Fixed bug when loading entries via a Callable was overseen when a CacheLoader was used. Added further tests to cover this bug for the future.

--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
         <url>http://www.kantega.no</url>
     </organization>
 
-    <name>Limber web framework</name>
-    <description>A web framework based on DOM manipulation.</description>
+    <name>Guava cache overflow extension</name>
+    <description>An extension to Guava caches that allows cache entries to overflow to disk.</description>
     <url>http://www.kantega.no</url>
 
     <properties>
