--- a/pom.xml
+++ b/pom.xml
@@ -4,20 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>no.kantega.lab.guava</groupId>
+    <groupId>com.blogspot.mydailyjava</groupId>
     <artifactId>guava-cache-overflow-extension</artifactId>
     <version>0.1-SNAPSHOT</version>
 
     <inceptionYear>2013</inceptionYear>
 
-    <organization>
-        <name>Kantega AS</name>
-        <url>http://www.kantega.no</url>
-    </organization>
-
     <name>Guava cache overflow extension</name>
     <description>An extension to Guava caches that allows cache entries to overflow to disk.</description>
-    <url>http://www.kantega.no</url>
+    <url>https://github.com/raphw/guava-cache-overflow-extension</url>
 
     <properties>
         <version.guava>14.0.1</version.guava>
@@ -37,12 +32,10 @@
 
     <developers>
         <developer>
-            <id>rafwin</id>
+            <id>raphw</id>
             <name>Rafael Winterhalter</name>
-            <email>rafael.winterhalter@kantega.no</email>
+            <email>rafael.wth@web.de</email>
             <url>http://mydailyjava.blogspot.com</url>
-            <organization>Kantega</organization>
-            <organizationUrl>http://www.kantega.no</organizationUrl>
             <roles>
                 <role>developer</role>
             </roles>
@@ -74,6 +67,5 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
 
 </project>
