--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.blogspot.mydailyjava</groupId>
     <artifactId>guava-cache-overflow-extension</artifactId>
-    <version>0.2-SNAPSHOT</version>
+    <version>0.2</version>
 
     <inceptionYear>2013</inceptionYear>
 
