--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5.1</version>
                 <inherited>true</inherited>
                 <configuration>
                     <source>1.6</source>
